fixed bugs, updated description for swagger, changed configuration, added Dockerfile, refactored