@@ -2,6 +2,7 @@ package ovh.major.myauthorisationsystemtest.security;
 
 import lombok.AllArgsConstructor;
 import org.springframework.security.authentication.BadCredentialsException;
+import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
@@ -11,6 +12,7 @@ import ovh.major.myauthorisationsystemtest.security.login.dto.SingleUserDTO;
 
 import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @AllArgsConstructor
@@ -26,9 +28,9 @@ class LoginUserDetailsService implements UserDetailsService {
 
     private org.springframework.security.core.userdetails.User getUser(SingleUserDTO user) {
         List<String> rolesList = Collections.singletonList(user.role().name());
-        List<SimpleGrantedAuthority> authorities = rolesList.stream()
+        List<GrantedAuthority> authorities = rolesList.stream()
                 .map(SimpleGrantedAuthority::new)
-                .toList();
+                .collect(Collectors.toList());
 
         return new org.springframework.security.core.userdetails.User(
                 user.name(),
